--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,13 @@
-body {
-  background-color: rgb(216, 49, 49);
-  color: #000;
-}
+// @import "./utils/breakpoints";
+@import "./utils/placeholders";
+@import "./utils/mixins";
+// @import "./base";
+@import "./components/container";
+@import "./components/page-header";
+@import "./components/company-logo";
+@import "./components/section";
+@import "./components/features";
+@import "./components/reviews";
+// @import "./components/modal";
+// @import "./components/menu";
+// @import "./components/mobile-menu";
