--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,24 @@
   margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .container {
+    width: 1140px;
+  }
+}
+
 .page-header {
   border-bottom: 2px solid #000;
 }
