--- a/sass/components/_reviews.scss
+++ b/sass/components/_reviews.scss
@@ -1,5 +1,12 @@
+.reviews {
+  @media screen and (max-width: 667px) {
+    display: none;
+  }
+}
+
 .reviews-set {
   @extend %list;
+  display: flex;
 }
 
 .reviews-item {
@@ -7,6 +14,7 @@
   padding: 40px;
   color: #fff;
   font-size: 48px;
+  width: 33.33333 %;
 }
 
 $colors: "#795548", "#607D8B", "#7B1FA2";
