--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,5 +1,15 @@
 .features-set {
   @extend %list;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -5px;
+  }
+
+  @media screen and (min-width: 1140px) {
+    margin: -10px;
+  }
 }
 
 .features-item {
@@ -8,6 +18,22 @@
   padding-bottom: 20px;
   color: #fff;
   font-size: 32px;
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 2 * 10px) / 2);
+    margin: 5px;
+  }
+
+  @media screen and (min-width: 1140px) {
+    width: calc((100% - 3 * 20px) / 3);
+    margin: 10px;
+  }
+
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 $colors: "#F44336", "#3F51B5", "#4CAF50", "#00BCD4", "#E91E63", "#009688";
