--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@
 }
 
 .page-header {
+  position: relative;
   border-bottom: 2px solid #000;
 }
 
@@ -49,6 +50,44 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   min-height: 80px;
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: palegoldenrod;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.menu-container.is-open {
+  display: block;
 }
 
 .company-logo {
@@ -146,7 +185,7 @@
   background-color: #009688;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 667px) {
   .reviews {
     display: none;
   }
