--- a/css/main.css
+++ b/css/main.css
@@ -216,4 +216,35 @@
 .reviews-item:nth-child(3) {
   background-color: #7B1FA2;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 50px 30px;
+  overflow-y: scroll;
+}
+
+.backdrop.is-hidden {
+  display: none;
+}
+
+.modal {
+  padding: 20px;
+  background-color: #fff;
+}
+
+@media (min-width: 600px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    max-width: 500px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
